# proxmox-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  main.rs
src/tools/: cluster.rs  mod.rs  nodes.rs  slim.rs
