[package]
name = "proxmox-mcp"
version = "0.7.0"
edition = "2024"
description = "A read-only MCP server that exposes Proxmox VE data as tools for Claude and other MCP clients"
license = "GPL-3.0"
repository = "https://github.com/3kirt/proxmox-mcp"

[[bin]]
name = "proxmox-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-io",
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
